--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,11 @@
 .App {
-  text-align: center;
+  /* text-align: center;
   display: flex;
   min-height: 100vh;
   align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(79deg, rgb(219, 52, 52), rgb(128, 63, 63), rgb(158, 51, 51));
+  justify-content: center; */
+  /* background-image: linear-gradient(79deg, rgb(219, 52, 52), rgb(128, 63, 63), rgb(158, 51, 51)); */
+  background-color: #FFBA5A;
 }
 
 .auth_form_container, .login-form, .register-form {
@@ -132,3 +133,31 @@ a {
   border-radius: 10px;
   text-decoration: none;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  color: #d12727;
+  font-size: 2em;
+  align-items: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  border-bottom: 1px solid #12810e;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+.job-title {
+  color: #8ccb27;
+  font-weight: bold;
+}
+
+
+
+a:hover {
+  text-decoration: none;
+}
+
