--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ code {
 
 } */
 
-.comment-flexbox {
+/* .comment-flexbox {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -66,4 +66,4 @@ code {
   border-radius: 5px;
   margin: 10px 0;
   word-break: break-all;
-} 
+}  */
